services/face-analyzer/kubernetes/face-analyzer.stateful.yml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  # This name uniquely identifies the stateful set
  name: face-analyzer-stateful
  labels:
    app: face-analyzer
spec:
  serviceName: face-analyzer
  replicas: 1
  selector:
    matchLabels:
      app: face-analyzer
  template:
    metadata:
      labels:
        app: face-analyzer
    spec:
      containers:
      - name: face-analyzer
        image: ghcr.io/swiss-ai-center/core-engine-face-analyzer:latest
        # If you build the image locally, change the next line to `imagePullPolicy: Never` - there is no need to pull the image
        imagePullPolicy: Always
        ports:
        - name: http
          containerPort: 80
